CHANGES for THREDDS Data Server (TDS)
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Release Details 4.1:
 0:
  ehcache debugging commands
  catalogWriting.useBytesForDataSize
  grib-8.0 indexing
  Fix thredds.servlet.HtmlWriter to correctly deal with absolute URLs for folder icons and such.
  cdmremote refactor
  forms now integrated with cdmremote, delete non-compiling classes
  place default ehcache.xml in WEB-INF, can be overridden in threddsConfig.xml

Release Details 4.0:
 20:
  fix wms capabilities jsp
 18:
  Opendap - NcSDString: bug in scalar ArrayChar
 17:
  Add file size limit to NetcdfCFWriter.
  Minor bug fixes.
 16:
  Allow use of alternate CrawlableDataset implementations in NcML aggregation
  Improved error handling
  Clean up logging
  Minor bug fixes
 15:
  ncss: check files < 2 Gbytes
  WMS: clean up logging, some error handling
  opendap configuration in threddsConfig.xml
  opendap: add DAS to DDX with myDDS.ingestDAS( ds.getDAS());
  Add Reinit back
  Enhance datasetScan/addTimeCoverage to allow matching on the dataset path
  Update the NCEP SREF datasets in IDD and IDV catalogs
 14:
  WMS: minor configuration improvements
  cdmremote service
 13:
  GRIB indexing improvements.
  Minor bug and logging fixes.
 12:
  WMS: improved logging and exception handling.
  Minor bug fixes.
 11:
  WMS SERVICE parameter requirement aligned with specification.
  OPeNDAP error responses use correct "Content-Description header value ("dods-error").
 10:
  WMSController finally always closes dataset
  stricter ncss query parsing
  NcDODSServlet refactored to OpendapServlet: Redo error handling, put 500 Mb limit
 09:
  admin/log/ interface
  logging cleanup
  try to get new GRIB/Grid to work correctly on server
 08:
  candidate beta-release to 8080
  various cleanup
  use GRIB/Grid refactor i jCDM
 07:
  Rebuild opendap.jar with html page links corrected
  Port improved WMS version negotiation from ncWMS.
 06:
  cdmValidator in separate servlet